# snowmix

./: AUTHORS  COPYING  ChangeLog  EndOfLifeAnnouncements  LICENSE  Makefile.am  NEWS  README  ReleaseNotes  bash_profile_example  bootstrap  bootstrapmin-opengl  configure.ac  strapboot
CS-scripts/: manager  nohup.out  stream  stream.oldold  test-stream  xinetd_av
CS-scripts/borgergade/: livestreamtest  log  log2  make_stream  nohup.make_stream  nohup.out  nohup.send_stream_ustream  pmm  run_overview  send_stream3
CS-scripts/stream01/: borgergade  borgergade2  borgergade_mosaic  find_xinetd  getaudio  livestreamtest2  make_stream2  make_stream3  nohup.send_stream_livestream  nohup.send_stream_you  overview  send_stream  send_stream2  server_mixer  server_speaker
CS-scripts/vostok01/: getspeaker  intercom  make_stream  make_stream2  make_stream3  nohup.out  overview  send2borgergade
CS-scripts/vostok02/: input2feed  make-mosaic-stream  send2borgergade-mosaic
bootstrapd/: bootstrap-OSX  bootstrap-arch  bootstrap-centos  bootstrap-debian  bootstrap-fedora  bootstrap-freebsd  bootstrap-generic  bootstrap-opensuse  bootstrap-ubuntu
docs/: Makefile  compileandinstall.html  default.css  index.html  upload
docs/Advanced/: libraries.html  scripting.html
docs/Documentation/: changelog.html  developmentplans.html  endoflife.html  guide-glshapes.html  guides.html  reference.html  releasenotes.html  reserved.html
docs/Examples/: basic.html  input.html  output.html  scripting.html
docs/Intro/: about.html  compileandinstall.html  downloads.html  faq.html  news.html  requirements.html  screenshots.html  support.html
docs/documentation/: changelog.html  endoflife.html  reference.html  reserved.html
docs/manuals/: reference  reftext
docs/old/: about.html  default.css  index.html
frames/: CS_TV_720p_background.bgra  CopenhagenSuborbitals-1024x576.bgra  CopenhagenSuborbitals-1280x720.bgra  CopenhagenSuborbitals-704x576.bgra  CopenhagenSuborbitals-768x576.bgra  Makefile.am  dead-1024x576.bgra  dead-1280x720.bgra  dead-1280x800.bgra  dead-320x180.bgra  dead-352x288.bgra  dead-640x480.bgra  dead-704x576.bgra  dead-720x480.bgra  dead-768x576.bgra  make_frame
images/: Makefile.am
ini/: Clock  DigitalClock  DigitalCounter  DigitalMeter  Makefile.am  audio  basic_feeds.ini  basis.ini  camrelay-stream-ts  demo-scenes  example-3vfeed  gl_test2.ini  logotest  logotest2  minimal-1feed  minimal.ini  mosaic-basis  ninefeeds.ini  saphire-DigitalCounter  saphire-DigitalMeter  saphire-basis.ini  saphire-shape  sapphire-basis.ini  sapphire-clocks  sapphire-feeds  sapphire-radar  sapphire-scenes  shape-test.ini  text_tutorial.ini  tm65-audio  tm65-basis-720p.ini  tm65-basis.ini  tm65-shape  tm65-virtual_feeds-720p.ini  tm65-virtual_feeds.ini  videomixer.ini  virtual_feeds.ini  virtual_feeds_2.ini
ini-old/: Clock  DigitalClock  DigitalCounter  Makefile  Makefile.am  Makefile.in  audio  basic_feeds  basis  demo-scenes  example-3vfeed  gl_test.ini  intercom  minimal-1feed  mosaic-basis  ninefeeds.ini  pmm  saphire-DigitalCounter  saphire-DigitalMeter  saphire-Radar  saphire-audio  saphire-basis  saphire-shape  sapphire-audio  sapphire-basis  sapphire-clocks  sapphire-feeds  sapphire-radar  sapphire-texts  shape-test  test  test2  test3  text_tutorial  tm65-basis  tm65-basis-720p  tm65-shape  tm65-virtual_feeds  tm65-virtual_feeds-720p  udprelay  (+2 more)
relay/: Makefile.am  controller.cpp  controller.h  crc.h  crc32c  crc32c.c  main.cpp  nohup.out  pmm  queues.cpp  queues.h  receivers.cpp  receivers.h  relay.h  senders.cpp  senders.h  tsanalyzer.cpp  tsanalyzer.h
scripts/: Makefile.am  README  av_output2dummy  av_output2screen  av_output2tcp_server  demo  find_xinetd  gstreamer-settings  input2feed  output2dummy  output2file  output2rtp  output2screen  output2screen-auto  pmm  rtsp2feed  rtsp2feed2  saphire_simulation  snowmix-settings  snowmix-settings-old  v4l2input2feed
scripts/old/: av_output2dummy  av_output2screen  gstreamer-settings  input2feed1  input2feed2  input2feed2-704  input2feed3  input2feed3-704  input2feed4  input2feed4-1024  input2feed4-1024-testsrc  output1-screen  output1-x264  output2dummy  output2file  output2rtp  output2screen  output2tcp  snowmix-settings  stream1-704  stream2-704  stream3-704  stream4-1024
slib/: .swp  Makefile.am  README  aismaps.slib  audio_delay.slib  basic-shapes.slib  clock2  clocks.slib  clocks2.slib  cslogo.slib  feeds.slib  graphs.slib  images.slib  radar.slib  scenes.slib  synctest.slib  system.slib  texts.slib
src/: audio_clip.cpp  audio_feed.cpp  audio_feed.h  audio_mixer.cpp  audio_mixer.h  audio_sink.cpp  audio_util.h  bars.cpp  cairo_graphic.cpp  command.cpp  command.h  controller.h  ctrisaudio.cpp  monitor.cpp  monitor.h  opengl_video.cpp  opengl_video.h  snowmix.h  snowmix_util.cpp  snowmix_util.h  tcl_interface.h  video_feed.cpp  video_feed.h  video_image.cpp  video_image.h  video_mixer.cpp  video_mixer.h  video_output.cpp  video_output.h  video_shape.cpp  video_shape.h  video_text.cpp  video_text.h  virtual_feed.cpp  windows_util.cpp
src/old/: Makefile.am  add_by.h  audio_clip.h  audio_feed.cpp  audio_mixer.cpp  audio_sink.cpp  audio_sink.h  audio_util.cpp  cairo_graphic.cpp  cairo_graphic.h  cairotest.c  controller.cpp  gl3example.cpp  main.cpp  snowmix.h  snowmix_util.cpp  tcl_interface.cpp  version.h  video_feed.cpp  video_feed.h  video_image.cpp  video_mixer.cpp  video_output.cpp  video_shape.cpp  video_text.cpp  virtual_feed.cpp  virtual_feed.h  windows_util.h
tcl/: Makefile.am  audio.inc  commentator.inc  connection.inc  cs_feed_commands.inc  graph.inc  images  output.inc  relay.inc  relay_analyzer.inc  scenes.inc  server.inc  snowoutput.tcl  snowscene.tcl  utility.inc
test/: Makefile.am
www/: mixer-basic-feeds-inc  mixer-main.php  mixer-vi-live.php  mixer-virtual-feed.php  mixer.inc  pmm.php  snowmix  video-axis1.php  video-axis2.php  video-axis3.php  video-bonecam.php  video-main.php  video-mixer-mp4.php  video-mixer.php  video.html
xinetd/: snowmix-audio  snowmix-video  xinetd-audio-feed  xinetd-video-feed
(+52 files in other folders)
